style:使用ruff进行格式化

--- a/Linear_Regression/LinearRegression.ipynb
+++ b/Linear_Regression/LinearRegression.ipynb
@@ -13,9 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -34,6 +32,7 @@
    ],
    "source": [
     "import data_processing_1LR as gd\n",
+    "\n",
     "x, y = gd.get_data()\n",
     "print(x)"
    ]
@@ -118,9 +117,10 @@
    ],
    "source": [
     "import LinearRegression1 as LR1\n",
-    "w ,b = LR1.get_w_b(x, y)\n",
-    "print(w,b)\n",
-    "y_hat = w*x + b\n",
+    "\n",
+    "w, b = LR1.get_w_b(x, y)\n",
+    "print(w, b)\n",
+    "y_hat = w * x + b\n",
     "plt.plot(x, y_hat, color='r')\n",
     "plt.scatter(x, y)"
    ]
