--- a/docs/notes.tex
+++ b/docs/notes.tex
@@ -218,7 +218,7 @@ $$
 P(Y=k|x) = \frac {e^{w_k \cdot x + b_k}}{\sum_{k=1}^{K} e^{w_k \cdot x + b_k}} , k = 1,2,...,K
 $$
 
-\subsubsection{2025年3月4日：Karpathy的大语言模型介绍}
+\subsubsection{2025年3月6日：Karpathy的大语言模型介绍}
 2025年3月4日：Karpathy的大语言模型介绍超链接：\href{https://www.bilibili.com/video/BV16cNEeXEer/?spm_id_from=333.337.search-card.all.click&vd_source=13dfbe5ed2deada83969fafa995ccff6}{B站视频链接}。
 
 大模型流程分为：预训练（pre-training）和后训练（post-training）两个阶段。预训练是为了让模型学习到大量的数据，提高模型的泛化能力；后训练是为了让模型适应特定任务，提高模型的性能。
@@ -248,8 +248,35 @@ $$
 在模型的局限性方面，模型需要通过token来思考，这在一定程度上限制了其处理信息的方式。
 模型在计数方面存在困难，不擅长拼写，并且由于是基于token级的模型，导致其无法看到字符。
 
+想要模型对专有信息进行理解，增强模型在特定行业领域的知识，使用\textbf{SFT}。有监督微调（SFT，Supervised Fine-Tuning）通过提供人工标注的数据，进一步训练预训练模型，让模型能够更加精确地处理特定领域地任务。
+除了”有监督微调”，还有“无监督微调”和“自监督微调”，当提到“微调”时，通常指的是“有监督微调”。
 
 
+提高个性化和互动性强的服务，使用\textbf{RLHF}。强化学习（RLHF，Reinforcement Learning from Human Feedback）分为DPO（Direct Preference Optimization）和PPO（Proximal Policy Optimization）两种方法，通过人类反馈来训练模型，提高模型的性能。
+\begin{itemize}
+    \item DPO：通过\textbf{人类对比选择}直接优化生成模型，使其产生更符合用户需求地结果。
+    \item PPO：通过\textbf{奖励信号}来渐进式调整模型地行为策略。
+\end{itemize}
+
+提高模型对专有信息的理解，增强模型在特定行业领域的知识，获取和生成最新的、实时的信息，使用\textbf{RAG}。
+检索增强生成（RAG，Retrieval-Augmented Generation）将外部信息检索与文本生成结合，帮助模型在生成答案时，实时获取外部信息和最新信息。
+
+微调适合有充分地数据，能够直接提示模型地固有能力，无需依赖外部检索；RAG适合只有非常少地数据，动态更新的数据，每次回答问题前需要耗时检索知识库，回答质量依赖于检索的质量。
+少量私有数据最好微调和RAG都做；会动态更新的知识使用RAG；大量垂直领域的知识用微调。
+
+预训练模型（基座模型）指的是已经在大量数据上训练过的模型，也就是我们微调前需要预先下载的开源模型。它具备了较为通用的知识和能力，能够解决一些常见的任务，开源在此基础上进行进一步的微调，以适应特定的任务或领域。
+
+微调算法分为全参数微调和部分参数微调。全参数微调对整个预训练模型进行微调，会更新所有参数，通常可以达到最佳性能，但是计算资源大，可能过拟合；部分参数微调只更新模型的部分参数，检索了计算成本，但是可能无法达到最佳性能。
+
+LoRA是著名的部分参数微调算法，通过低秩矩阵分解的方式来进行部分参数微调。矩阵的秩是指矩阵中线性无关的行或列额最大数量，反应矩阵所包含的有效信息量。
+$$
+h = W_0x + \triangle Wx = W_0x + BAx
+$$
+其中，$h$是模型输出，$W_0$是预训练模型的参数，，是一个全秩矩阵；$x$是模型输入；
+$\triangle W_0$是微调后元素权重的变化量，，也是一个全秩矩阵，大小和$W_0$相同；$BA$是两个低秩矩阵，它们的乘积表示对原始权重的微调变化量
+$\triangle W_0$。
+
+$W_0x + \triangle Wx$是全参数的输出；$W_0x + BAx$是部分参数的输出。LoRA训练结束后通常需要进行权重合并。
 \subsection{实践}
 
 
